--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928984.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926463-GettyImages-1232680919-320x200.jpg"><p align="center">美欧亚多国踩痛处 中共外交部尴尬回应</p></a>
-<a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928984.md#1" title="美欧亚多国踩痛处 中共外交部尴尬回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926463-GettyImages-1232680919-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928278.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928289-GettyImages-1232707619-320x200.jpg"><p align="center">【疫情5.6】印度新病例及死亡数再破纪录</p></a>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928278.md#1" title="【疫情5.6】印度新病例及死亡数再破纪录""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928289-GettyImages-1232707619-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928354.md#1" title="“别学我 很危险”菲总统退回中共国药疫苗""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/10/p9066151a303492750-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928052.md#1" title="美议员提“桥梁法案” 对抗中共一带一路""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12928064-GettyImages-1203830481-320x200.jpg">&nbsp;</a>
@@ -12,14 +11,16 @@
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926969.md#1" title="G7峰会谴责中俄霸凌 关注台海局势""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926987-GettyImages-1232704184-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926888.md#1" title="中共火箭碎片将坠落未知地 白宫关注""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12927018-000_98Y2UL-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926974.md#1" title="【快讯】美政府支持放弃疫苗专利权保护""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1290751952-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926788.md#1" title="凤凰金融被正式立案 刘长乐女婿被刑拘""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926826-Unknown-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/odhwcb357/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://odhwcb357.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928961.md#1">【直播】美众院外委会听证：中共新疆暴行</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928863.md#1">【唐浩视界】中共诱杀特斯拉 美人计迷倒全球</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928910.md#1">尼泊尔恐成下一个印度 疫情失控阳性率44%</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928709.md#1">比尔?盖茨超豪华别墅曝光 梅琳达愿住小房子</a><br>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929035.md#1">只因负面评论“黑命贵”新泽西模范女警官遭开除</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928984.md#1">美欧亚多国踩痛处 中共外交部尴尬回应</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928709.md#1">比尔?盖茨超豪华别墅曝光 梅琳达愿住小房子</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12929035.md#1">只因负面评论“黑命贵”新泽西模范女警官遭开除</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928984.md#1">美欧亚多国踩红线 中共外交部尴尬回应</a><br>
+:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928833.md#1">费城市长颁发褒奖令 庆祝世界法轮大法日</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928741.md#1">中国侨民自曝经历 中共偷偷禁国人从印度返国</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928797.md#1">美就业复苏续好转 首领失业金人数减至49.8万</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
+<a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924307.md#1">习近平学毛自称“舵手” 美情报部门关注</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925298.md#1">对文革看法引发中共红二代争执 陶斯亮删文</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12922533.md#1">【拍案惊奇】李克强职位或变 辽宁号监造者出事</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925067.md#1">【翻墙必看】分析：习对李克强或有新安排</a><br>
@@ -50,7 +51,6 @@
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927239.md#1">【时事纵横】红二代与习分裂 拜登模糊保台？</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928123.md#1">江苏女商人行贿前河北副省长大秘细节曝光</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927106.md#1">大量外籍人士离港以及经济衰退 香港房租大跌</a><br>
-<a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12928863.md#1">【唐浩视界】中共诱杀特斯拉 美人计迷倒全球</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927153.md#1">【有冇搞错】中共航母的那些黑幕和猫腻</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/6/n12927345.md#1">嘲讽成龙？香港导演拍《鼠胆龙威》意外大卖</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/4/n12924453.md#1">【军事热点】中共寻求取代国际秩序 美军再出拳</a><br>
@@ -58,7 +58,6 @@
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926847.md#1">【役情最前线】港新首富受习扶持 发迹内幕曝光</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12927126.md#1">【远见快评】印变种病毒曝细节 欧盟重拳击中共</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926217.md#1">母亲视角（四）：为何不少社会精英是左派？</a><br>
-<a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926788.md#1">凤凰金融被正式立案 刘长乐女婿被刑拘</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926767.md#1">搁置中欧投资协议后 欧盟再颁草案限外企</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12926118.md#1">【新闻大家谈】美国家实验室暗查武汉病毒所</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/5/n12925967.md#1">3至4月份 2857名法轮功学员被绑架骚扰</a><br>
@@ -98,15 +97,17 @@
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12919296.md#1">布林肯赴伦敦参加G7外长会 联盟施压中共</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918735.md#1">杨晖律师：中国到处是高压线 不止一根</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918699.md#1">中企悄悄买巨额英国资产 含能源国防领域</a><br>
+<a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/2/n12918788.md#1">河北高校持续封校 学生快憋疯五一冲校门</a><br>
+<a href="https://github.com/odhwcb357/djy/blob/master/gb/21/5/1/n12918559.md#1">【新闻看点】习与毛争锋名言？美防长布局备战</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://219.85.170.191/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 52,449</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://219.84.232.200/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,947</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 376,845,821 人
+!共 376,844,633 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926843.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926863-f622a0c74ee30a985b3c3dc5ff9fe798-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926843.md#1">四川大学生家遭强拆 父子睡在废墟上</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926001.md#1">牛腾宇首见母亲曝黑幕 坚信真相会大白天下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926601.md#1">《马三家来信》网上放映会 中共奴工产品再成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924228.md#1">成都近八旬法轮功学员遭冤判两年 劫入监狱</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924497.md#1">西安千亿城改涉黑案受害人：中国无法律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924543.md#1">澳华裔学者声援港法轮功 吁将中共罪恶曝光</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928199.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/10/908311016111459-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928199.md#1">A股三大股指收跌 疫苗股重挫致创指跌2.48%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927932.md#1">38家银行赚走A股42%净利 总市值仅占1/8</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927331.md#1">印度疫情肆虐 中资在印手机厂产能下跌40%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927433.md#1">传腾讯与CFIUS磋商 冀保留2家美游戏公司股权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926881.md#1">腾讯被盯上？ 其持股16科企恐涉反垄断调查</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926803.md#1">欧洲稳定机制负责人：警惕人民币成第二大货币</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928333.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928333.md#1">河南涉黑案牵出12个保护伞 政法委书记涉案</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927639.md#1">G7外长会首度强调台海和平 支持台湾国际参与</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927624.md#1">萧美琴投书美媒 盼扩大台美贸易关系与合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926746.md#1">美中角力 中共被曝拟恢复太平洋小岛战略机场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926632.md#1">中共海军有致命弱点 若开战美可借力日本</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12927139.md#1">美军参谋长警告国际秩序不稳定 剑指中共</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926688-GettyImages-1232681331-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1">中国侨民自曝经历 中共偷偷禁国人从印度返国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926177.md#1">京津冀等11省市再遇沙尘天气 京沪有大风</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925594.md#1">河南洛阳高铁桥附近着火 部分列车晚点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925414.md#1">五一大陆四省高速路现车祸 至少18死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925161.md#1">四川绵阳3.6级地震变10级 微博再闹乌龙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924665.md#1">8省遭暴雨 北京等机场超200架次航班取消</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1">长沙幼儿园教师踢掉男童门牙 将监视器格式化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927726.md#1">爱奇艺选秀节目被停播 粉丝买奶倒奶视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927545.md#1">三退声明精选（2021/05/05）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925426.md#1">学者：中共百年之际 内外高压政权岌岌可危</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924953.md#1">成都男子长期吃生肉 脑内长满虫子</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12923174.md#1">广西初中女生三米高树上吊亡 家属：疑点重重</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12925442-yanghui2FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1">律师详析刑法300条：制造冤案 应予废除（下）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924988.md#1">律师详析刑法300条：制造冤案 应予废除（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12922204.md#1">党媒宣扬教师出资给留守儿童改善伙食 挨轰</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1">台湾诗人管管跌倒昏迷辞世 享寿92岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918565.md#1">美下周恢复中国学生签证处理 部分专业受限</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926843.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926863-f622a0c74ee30a985b3c3dc5ff9fe798-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926843.md#1">四川大学生家遭强拆 父子睡在废墟上</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926001.md#1">牛腾宇首见母亲曝黑幕 坚信真相会大白天下</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926601.md#1">《马三家来信》网上放映会 中共奴工产品再成焦点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924228.md#1">成都近八旬法轮功学员遭冤判两年 劫入监狱</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924497.md#1">西安千亿城改涉黑案受害人：中国无法律</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924543.md#1">澳华裔学者声援港法轮功 吁将中共罪恶曝光</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928199.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/10/908311016111459-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928199.md#1">A股三大股指收跌 疫苗股重挫致创指跌2.48%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927932.md#1">38家银行赚走A股42%净利 总市值仅占1/8</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927331.md#1">印度疫情肆虐 中资在印手机厂产能下跌40%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927433.md#1">传腾讯与CFIUS磋商 冀保留2家美游戏公司股权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926881.md#1">腾讯被盯上？ 其持股16科企恐涉反垄断调查</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926803.md#1">欧洲稳定机制负责人：警惕人民币成第二大货币</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928984.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926463-GettyImages-1232680919-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928984.md#1">美欧亚多国踩红线 中共外交部尴尬回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928333.md#1">河南涉黑案牵出12个保护伞 政法委书记涉案</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927639.md#1">G7外长会首度强调台海和平 支持台湾国际参与</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927624.md#1">萧美琴投书美媒 盼扩大台美贸易关系与合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926746.md#1">美中角力 中共被曝拟恢复太平洋小岛战略机场</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926632.md#1">中共海军有致命弱点 若开战美可借力日本</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12926688-GettyImages-1232681331-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928741.md#1">中国侨民自曝经历 中共偷偷禁国人从印度返国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12926177.md#1">京津冀等11省市再遇沙尘天气 京沪有大风</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925594.md#1">河南洛阳高铁桥附近着火 部分列车晚点</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925414.md#1">五一大陆四省高速路现车祸 至少18死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925161.md#1">四川绵阳3.6级地震变10级 微博再闹乌龙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12924665.md#1">8省遭暴雨 北京等机场超200架次航班取消</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12928256.md#1">长沙幼儿园教师踢掉男童门牙 将监视器格式化</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927726.md#1">爱奇艺选秀节目被停播 粉丝买奶倒奶视频热传</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/6/n12927545.md#1">三退声明精选（2021/05/05）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925426.md#1">学者：中共百年之际 内外高压政权岌岌可危</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924953.md#1">成都男子长期吃生肉 脑内长满虫子</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/4/n12923174.md#1">广西初中女生三米高树上吊亡 家属：疑点重重</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/05/id12925442-yanghui2FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12925387.md#1">律师详析刑法300条：制造冤案 应予废除（下）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/5/n12924988.md#1">律师详析刑法300条：制造冤案 应予废除（上）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12922204.md#1">党媒宣扬教师出资给留守儿童改善伙食 挨轰</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/3/n12920900.md#1">台湾诗人管管跌倒昏迷辞世 享寿92岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12918565.md#1">美下周恢复中国学生签证处理 部分专业受限</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/5/1/n12917687.md#1">安徽一小学老师被停职 烫伤殴打多名学生</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/27/n12909575.md#1">【独家】中共推光伏产业 拜登堕气候陷阱</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/19/n12888922.md#1">【独家】文件爆西藏部队缺疫苗向河北求援</a><br>
 <a href="https://github.com/odhwcb357/djy/blob/master/gb/21/4/4/n12857876.md#1">【独家】联合国“移民网络”项目引担忧</a><br>
